--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.4",
     "@react-native-community/cli": "^7.0.3",
+    "@react-native-community/cli-tools": "^6.2.0",
+    "appdirsjs": "^1.2.4",
     "axios": "^0.26.1",
     "axios-hooks": "^3.0.1",
     "react": "17.0.2",
