--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-native-fontawesome": "^0.2.7",
     "@popperjs/core": "^2.11.4",
     "@react-native-community/cli": "^7.0.3",
     "@react-native-community/cli-tools": "^6.2.0",
@@ -19,11 +22,16 @@
     "axios": "^0.26.1",
     "axios-hooks": "^3.0.1",
     "react": "17.0.2",
+    "react-dark-mode-toggle": "^0.2.0",
     "react-native": "0.67.4",
     "react-native-cli": "^2.0.1",
     "react-native-eject": "^0.1.2",
+    "react-native-fontawesome": "^7.0.0",
     "react-native-safe-area-context": "^4.2.4",
-    "react-native-screens": "^3.13.1"
+    "react-native-screens": "^3.13.1",
+    "react-native-svg": "^12.3.0",
+    "react-native-switch": "^1.5.1",
+    "react-navigation-drawer": "^2.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
