--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-cli": "^2.0.1",
     "react-native-eject": "^0.1.2",
     "react-native-fontawesome": "^7.0.0",
+    "react-native-i18n": "^2.0.15",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
     "react-native-svg": "^12.3.0",
