--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@fortawesome/react-native-fontawesome": "^0.2.7",
     "@popperjs/core": "^2.11.4",
     "@react-native-community/cli": "^7.0.3",
@@ -33,6 +35,7 @@
     "react-native-screens": "^3.13.1",
     "react-native-svg": "^12.3.0",
     "react-native-switch": "^1.5.1",
+    "react-native-vector-icons": "^9.1.0",
     "react-navigation-drawer": "^2.7.2"
   },
   "devDependencies": {
