--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@fortawesome/react-native-fontawesome": "^0.2.7",
     "@popperjs/core": "^2.11.4",
+    "@react-native-async-storage/async-storage": "^1.17.3",
     "@react-native-community/cli": "^7.0.3",
     "@react-native-community/cli-tools": "^6.2.0",
     "@react-navigation/bottom-tabs": "^6.3.1",
@@ -31,6 +32,7 @@
     "react-native-eject": "^0.1.2",
     "react-native-fontawesome": "^7.0.0",
     "react-native-i18n": "^2.0.15",
+    "react-native-restart": "^0.0.24",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
     "react-native-svg": "^12.3.0",
